--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ deploy:
     branch: master
   access_key_id: $AWS_ACCESS_KEY_BEANSTALK
   secret_access_key:
-    secure: "$SECRET_ACCESS_KEY_BEANSTALK"
+    secure: $SECRET_ACCESS_KEY_BEANSTALK
