--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,4 @@ deploy:
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY_BEANSTALK
-  secret_access_key:
-    secure: "$SECRET_ACCESS_KEY_BEANSTALK"
+  secret_access_key: $SECRET_ACCESS_KEY_BEANSTALK
